# AdventureWorksDW2017

./: .gitignore  README.md  main.py  pyproject.toml
doc/: 季节性产品关联规则分析报告.md  客户流失预测分析报告.md  澳元客户RFM分析报告.md
reports/季节性产品关联规则/: Autumn_rules.csv  Autumn_top_rules.txt  Spring_rules.csv  Spring_top_rules.txt  Summer_rules.csv  Summer_top_rules.txt  Winter_rules.csv  Winter_top_rules.txt
reports/客户流失预测/: all_customer_predictions.csv  high_risk_customers.csv  model_performance.txt  selected_features.csv
reports/澳元客户RFM/: customer_lifecycle.csv  product_preferences.csv  rfm_analysis_report.html  rfm_cluster_naming_advice.txt  seasonal_patterns.csv
src/: churn_predict.py  churn_predict_backup.py  data_utils.py  rfm_analysis.py  seasonal_association.py
